# TrackNado

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  test_hub_creation.ipynb
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: api.md  examples.md  guide.md  index.md
docs/examples/: capcruncher.md  edge-cases.md  fluent-api.md  overview.md  snakemake.md
docs/guide/: advanced.md  conversion.md  getting-started.md  metadata.md  organization.md
docs/reference/: api.md  cli.md
examples/: capcruncher_hub.py  complex_edge_cases.py  refactored_make_hub.py  seqnado_make_hub.py
examples/capcruncher/: index.html
examples/edge-cases/: index.html
examples/fluent-api/: index.html
examples/overview/: index.html
examples/snakemake/: index.html
guide/advanced/: index.html
guide/conversion/: index.html
guide/getting-started/: index.html
guide/metadata/: index.html
guide/organization/: index.html
hubnado/: cli.py  design.py  utils.py
hubnado/old/: __init__.py
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
tests/: conftest.py  test_builder.py  test_cli.py  test_colors.py  test_extractors.py  test_grouping_regex.py  test_gtf_support.py  test_hosting.py  test_hub_validation.py  test_models.py
tracknado/: __init__.py  api.py  builder.py  cli.py  colors.py  converters.py  design.py  extractors.py  hosting.py  models.py  schemas.py  utils.py  validation.py
tracknado/as_files/: bigGenePred.as
tracknado/old/: cli.py  grouping.py  hub_setup.py  make_hub.py  track.py
ucsc_hub_maker/: cli.py  grouping.py  hub_setup.py  make_hub.py  track.py
