[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracknado*"]

[project]
name = "tracknado"
authors = [
    {name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk"},]
description = "CLI library to generate UCSC trackhubs from sequencing data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU GENERAL PUBLIC LICENSE Version 3"}
dynamic = ["version"]
dependencies = [
    "typer",
    "pandas",
    "cookiecutter",
    "setuptools_scm",
    "seaborn",
    "trackhub",
    "Pillow",
    "loguru",
    "pydantic>=2.0",
    "pandera>=0.18",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]


[project.scripts]
tracknado = "tracknado.cli:cli"

[tool.setuptools_scm]
write_to = "tracknado/_version.py"
local_scheme = "no-local-version"

[project.urls]