[build-system]
requires = [
    "setuptools >= 78.1.1",
    "wheel",
    "setuptools_scm[toml]>=9.2.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracknado*"]

[project]
name = "tracknado"
authors = [
    {name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk"},]
description = "CLI library to generate UCSC trackhubs from sequencing data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU GENERAL PUBLIC LICENSE Version 3"}
dynamic = ["version"]
dependencies = [
    "typer>=0.21.1",
    "pandas>=1.5.3,<3.0.0",
    "cookiecutter>=2.0,<3.0.0",
    "setuptools_scm>=9.2.2",
    "seaborn>=0.11.0,<=0.13.0",
    "trackhub>=1.0",
    "Pillow>=12.1.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "pandera>=0.29.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
test = [
    "pytest>=7.0",
]


[project.scripts]
tracknado = "tracknado.cli:cli"

[tool.setuptools_scm]
write_to = "tracknado/_version.py"
local_scheme = "no-local-version"

[project.urls]