[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel",
    "setuptools_scm[toml]>=10.0.5",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracknado*"]

[project]
name = "tracknado"
authors = [
    {name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk"},]
description = "CLI library to generate UCSC trackhubs from sequencing data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GENERAL PUBLIC LICENSE Version 3"}
dynamic = ["version"]
dependencies = [
    "typer==0.25.1",
    "pandas>=2,<3.0.0",
    "cookiecutter==2.7.1",
    "setuptools_scm==10.2.0",
    "seaborn==0.13.2",
    "trackhub==1.0",
    "Pillow==12.1.0",
    "loguru==0.7.3",
    "pydantic>=2.0",
    "pandera==0.31.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
test = [
    "pytest>=9.0.3",
]


[project.scripts]
tracknado = "tracknado.cli:cli"

[tool.setuptools_scm]
write_to = "tracknado/_version.py"
local_scheme = "no-local-version"

[project.urls]