[metadata]
name = ucsc_hub_maker
version = 0.1.0
author = asmith
author_email = alastair.smith@ndcls.ox.ac.uk
description = Quick CLI tool for making UCSC hubs
license = GNU GENERAL PUBLIC LICENSE Version 3
license_file = LICENSE
url = https://github.com/alsmith151/ucsc_hub_maker


[options]
zip_safe = False
include_package_data = False
packages = ucsc_hub_maker
install_requires=
    pandas
    trackhub
    seaborn
    click

[options.entry_points]
console_scripts = make-ucsc-hub = ucsc_hub_maker.cli:create_hub
